# Car_Dashboard

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/backend/include/: CarPhisics.h  CarPhysics.h  DashboardController.h  Engine.h  Simulator.h
src/backend/src/: CarPhysics.cpp  DashboardController.cpp  Engine.cpp  Simulator.cpp
src/frontend/: CustomGauge.qml  Main.qml
